test/ppx_expansion/expected_expansions.txt
===== a_nullary.ml =====
type err = [ `Unavailable ][@@deriving eta_error]
include
  struct
    let _ = fun (_ : err) -> ()
    let pp_err : Format.formatter -> err -> unit =
      fun __eta_fmt__001_ __eta_error__002_ ->
        match __eta_error__002_ with
        | `Unavailable ->
            Format.pp_print_string __eta_fmt__001_ "unavailable"
    let _ = pp_err
  end[@@ocaml.doc "@inline"][@@merlin.hide ]
===== b_string.ml =====
type err = [ `Not_found of string ][@@deriving eta_error]
include
  struct
    let _ = fun (_ : err) -> ()
    let pp_err : Format.formatter -> err -> unit =
      fun __eta_fmt__001_ __eta_error__002_ ->
        match __eta_error__002_ with
        | `Not_found __eta_value__003_ ->
            Format.fprintf __eta_fmt__001_ "not_found:%s" __eta_value__003_
    let _ = pp_err
  end[@@ocaml.doc "@inline"][@@merlin.hide ]
===== c_int.ml =====
type err = [ `Db of int ][@@deriving eta_error]
include
  struct
    let _ = fun (_ : err) -> ()
    let pp_err : Format.formatter -> err -> unit =
      fun __eta_fmt__001_ __eta_error__002_ ->
        match __eta_error__002_ with
        | `Db __eta_value__003_ ->
            Format.fprintf __eta_fmt__001_ "db:%d" __eta_value__003_
    let _ = pp_err
  end[@@ocaml.doc "@inline"][@@merlin.hide ]
===== d_int64.ml =====
type err = [ `Offset of int64 ][@@deriving eta_error]
include
  struct
    let _ = fun (_ : err) -> ()
    let pp_err : Format.formatter -> err -> unit =
      fun __eta_fmt__001_ __eta_error__002_ ->
        match __eta_error__002_ with
        | `Offset __eta_value__003_ ->
            Format.fprintf __eta_fmt__001_ "offset:%Ld" __eta_value__003_
    let _ = pp_err
  end[@@ocaml.doc "@inline"][@@merlin.hide ]
===== e_float.ml =====
type err = [ `Ratio of float ][@@deriving eta_error]
include
  struct
    let _ = fun (_ : err) -> ()
    let pp_err : Format.formatter -> err -> unit =
      fun __eta_fmt__001_ __eta_error__002_ ->
        match __eta_error__002_ with
        | `Ratio __eta_value__003_ ->
            Format.fprintf __eta_fmt__001_ "ratio:%g" __eta_value__003_
    let _ = pp_err
  end[@@ocaml.doc "@inline"][@@merlin.hide ]
===== f_bool.ml =====
type err = [ `Enabled of bool ][@@deriving eta_error]
include
  struct
    let _ = fun (_ : err) -> ()
    let pp_err : Format.formatter -> err -> unit =
      fun __eta_fmt__001_ __eta_error__002_ ->
        match __eta_error__002_ with
        | `Enabled __eta_value__003_ ->
            Format.fprintf __eta_fmt__001_ "enabled:%b" __eta_value__003_
    let _ = pp_err
  end[@@ocaml.doc "@inline"][@@merlin.hide ]
===== g_mixed.ml =====
type err = [ `Not_found of string  | `Db of int  | `Unavailable ][@@deriving
                                                                   eta_error]
include
  struct
    let _ = fun (_ : err) -> ()
    let pp_err : Format.formatter -> err -> unit =
      fun __eta_fmt__001_ __eta_error__002_ ->
        match __eta_error__002_ with
        | `Not_found __eta_value__003_ ->
            Format.fprintf __eta_fmt__001_ "not_found:%s" __eta_value__003_
        | `Db __eta_value__004_ ->
            Format.fprintf __eta_fmt__001_ "db:%d" __eta_value__004_
        | `Unavailable ->
            Format.pp_print_string __eta_fmt__001_ "unavailable"
    let _ = pp_err
  end[@@ocaml.doc "@inline"][@@merlin.hide ]
===== h_override.ml =====
type payload = {
  code: int }
let pp_payload fmt payload = Format.fprintf fmt "payload(%d)" payload.code
type err = [ `Custom of payload [@eta.render pp_payload]][@@deriving
                                                           eta_error]
include
  struct
    let _ = fun (_ : err) -> ()
    let pp_err : Format.formatter -> err -> unit =
      fun __eta_fmt__001_ __eta_error__002_ ->
        match __eta_error__002_ with
        | `Custom __eta_value__003_ ->
            Format.fprintf __eta_fmt__001_ "custom:%a" pp_payload
              __eta_value__003_
    let _ = pp_err
  end[@@ocaml.doc "@inline"][@@merlin.hide ]
===== i_result.ml =====
module Eta =
  struct
    module Effect =
      struct
        let fn _pos _name body = body
        let named _name body = body
        let sync_result f = f ()
      end
  end
module Db = struct let find _db _id = Ok 1 end
let db = ()
let id = 1
let _ =
  Eta.Effect.fn __POS__ __FUNCTION__
    (Eta.Effect.named "db.find"
       (Eta.Effect.sync_result (fun () -> Db.find db id)))
===== a_missing_override.ml (rejected) =====
[%%ocaml.error
  "eta_error: payload of tag `Custom in type err is unsupported; supported built-ins are string, int, int64, float, and bool; add [@eta.render My_type.pp] to this tag or write pp_err manually"]
type payload = {
  code: int }
type err = [ `Custom of payload ][@@deriving eta_error]
File "rejections/a_missing_override.ml", line 3, characters 24-31:
3 | type err = [ `Custom of payload ] [@@deriving eta_error]
                            ^^^^^^^
Error: eta_error: payload of tag `Custom in type err is unsupported;
       supported built-ins are string, int, int64, float, and bool; add
       [@eta.render My_type.pp] to this tag or write pp_err manually
